[gd_scene load_steps=7 format=3 uid="uid://1qlllsy6h5tc"]

[ext_resource type="Script" path="res://source/match/players/simple-clairvoyant-ai/SimpleClairvoyantAI.gd" id="1_shcx6"]
[ext_resource type="Script" path="res://source/match/players/simple-clairvoyant-ai/EconomyController.gd" id="2_otp5l"]
[ext_resource type="Script" path="res://source/match/players/simple-clairvoyant-ai/DefenseController.gd" id="3_jharw"]
[ext_resource type="Script" path="res://source/match/players/simple-clairvoyant-ai/OffenseController.gd" id="4_3nwat"]
[ext_resource type="Script" path="res://source/match/players/simple-clairvoyant-ai/IntelligenceController.gd" id="5_cxy6e"]
[ext_resource type="Script" path="res://source/match/players/simple-clairvoyant-ai/ConstructionWorksController.gd" id="6_cbdwc"]

[node name="SimpleClairvoyantAI" type="Node3D"]
script = ExtResource("1_shcx6")
color = Color(1, 0.360784, 0.45098, 1)

[node name="EconomyController" type="Node" parent="."]
script = ExtResource("2_otp5l")

[node name="DefenseController" type="Node" parent="."]
script = ExtResource("3_jharw")

[node name="OffenseController" type="Node" parent="."]
script = ExtResource("4_3nwat")

[node name="IntelligenceController" type="Node" parent="."]
script = ExtResource("5_cxy6e")

[node name="ConstructionWorksController" type="Node" parent="."]
script = ExtResource("6_cbdwc")
